@@ -6,7 +6,7 @@ The official web site is:
 
 https://github.com/yetist/lunar-date
 
-The Last version in lunar-date-@PACKAGE_VERSION@.
+The Last version in lunar-date-2.9.1.
 
 You can download the latest lunar-date tarball from the github.com:
 
