@@ -1,4 +1,9 @@
-#节日/纪念日、农历节气表。
+#公农历、星期节日/纪念日
+# 格式说明:
+# 0308[zh_CN]=妇女节|国际劳动妇女节
+# 表示3月8日为国际劳动妇女节，简称妇女节，之间使用|分隔。
+# 简称一般小于3个汉字，用来显示在日历上，通过%(holiday)格式化。
+# 全称可通过lunar_date_get_holiday()函数，设置full为true获取。
 
 #公历节假日
 [SOLAR] 
@@ -8,11 +13,12 @@
 0214[zh_CN]=情人节
 0214[zh_HK]=情人節
 0214[zh_TW]=情人節
+0215[zh_CN]=人口日|中国12亿人口日
 0228[zh_TW]=和平日
-0308[zh_CN]=妇女节
+0308[zh_CN]=妇女节|国际劳动妇女节
 0308[zh_HK]=婦女節
 0308[zh_TW]=婦女節
-0312[zh_CN]=植树节
+0312[zh_CN]=植树节|中国植树节
 0312[zh_HK]=植樹節
 0315[zh_CN]=消费者
 0315[zh_HK]=消費者
@@ -21,18 +27,19 @@
 0422[zh_CN]=地球日
 0422[zh_HK]=地球日
 0422[zh_TW]=地球日
-0501[zh_CN]=劳动节
+0501[zh_CN]=劳动节|国际劳动节
 0501[zh_HK]=勞動節
 0501[zh_TW]=勞動節
-0504[zh_CN]=青年节
+0504[zh_CN]=青年节|中国青年节
 0504[zh_HK]=青年節
 0504[zh_TW]=青年節
+0512[zh_CN]=护士节|国际护士节
 0601[zh_CN]=儿童节
 0601[zh_HK]=兒童節
 0601[zh_TW]=兒童節
-0701[zh_CN]=建党节
+0701[zh_CN]=建党节|中国共产党诞生纪念日
 0701[zh_HK]=建黨節
-0801[zh_CN]=建军节
+0801[zh_CN]=建军节|中国人民解放军建军纪念日
 0801[zh_HK]=建軍節
 0910[zh_CN]=教师节
 0910[zh_HK]=教師節
@@ -42,12 +49,15 @@
 1001[zh_CN]=国庆节
 1001[zh_HK]=國慶日
 1010[zh_TW]=國慶日
+1108[zh_CN]=记者节
+1224[zh_CN]=平安夜
 1224[zh_HK]=平安夜
 1224[zh_TW]=平安夜
+1225[zh_CN]=圣诞节
 1225[zh_HK]=耶誕節
 1225[zh_TW]=耶誕節
 
-#农历
+#农历节假日
 [LUNAR]
 0101[zh_CN]=春节
 0101[zh_HK]=春節
@@ -55,6 +65,7 @@
 0115[zh_CN]=元宵
 0115[zh_HK]=元宵
 0115[zh_TW]=元宵
+0202[zh_CN]=中和节
 0505[zh_CN]=端午
 0505[zh_HK]=端午
 0505[zh_TW]=端午
@@ -80,7 +91,7 @@
 1230[zh_HK]=除夕
 1230[zh_TW]=除夕
 
-#周
+#周节假日
 [WEEK]
 #0520表示：(05)月第(2)个星期(0)。 0-6表示周日到周六。
 0520[zh_CN]=母亲节
@@ -89,4 +100,5 @@
 0630[zh_CN]=父亲节
 0630[zh_HK]=父親節
 0630[zh_TW]=父親節
+1144[zh_CN]=感恩节
 1144[zh_HK]=感恩節
